--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#
+# Auto Specified
+#
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -87,3 +91,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+#
+# User Specified
+#
+
+# Google API Clients Secrets Files
+secrets/
